rename for use in rightmove jenkins until plugin is official

--- a/src/main/resources/hudson/plugins/projectbuildtimes/Messages.properties
+++ b/src/main/resources/hudson/plugins/projectbuildtimes/Messages.properties
@@ -13,7 +13,7 @@ BuildStats.NoRecentBuildsFailed=No recent builds failed
 BuildStats.RecentBuildsFailed={0}-{1}% of recent builds failed
 BuildStats.AllRecentBuildsFailed=All recent builds failed
 BuildStats.UnknownStatus=Unknown status
-BuildStats.BuildTimesChart=Build Times Chart
+BuildStats.BuildTimesChart=RM Build Times Chart
 BuildStats.Total=total
 BuildStats.Date=date
 BuildStats.Count=Time Taken
